# Agentic-AI

./: .env  pyproject.toml  requirements.txt
BasicChatbot/: .env  basicchatbot.ipynb
Debugging/: agent.py  debugging.ipynb  langgraph.json
Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
